# discord_ta_bot

./: .gitignore  Cargo.toml  README.md  config.env
src/: logfile.rs  main.rs  textadventure.rs
